fix footer z-index

--- a/client/src/styles/scss/component/_footer.scss
+++ b/client/src/styles/scss/component/_footer.scss
@@ -1,4 +1,5 @@
 .main-footer {
+  z-index: 1;
   position: relative;
   padding: 1rem 0;
   margin-top: 1em;
